testing/framework/resources/Advanced/Failing/mondrian/query6022.q
select time_by_day.the_year as `Year`, product_class.product_family as Product Family, product_class.product_department as Product Department, product_class.product_category as Product Category, product_class.product_subcategory as Product Subcategory, sales_fact_1997.unit_sales as Unit Sales from time_by_day as time_by_day, sales_fact_1997 as sales_fact_1997, product_class as product_class, product as product where sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and sales_fact_1997.product_id = product.product_id and product.product_class_id = product_class.product_class_id and product_class.product_family = 'Food' and product_class.product_department = 'Baked Goods' and product_class.product_category = 'Bread' and product_class.product_subcategory = 'Bagels' order by time_by_day.the_year ASC, product_class.product_family ASC, product_class.product_department ASC, product_class.product_category ASC, product_class.product_subcategory ASC;
